# Target - sources
SET(SRCS
  step/step_parse.cc
  step/step_symbolic_link.cc
  wgt_backend.cc
)

IF(WRT_LAUNCHER)
    ADD_DEFINITIONS("-DWRT_LAUNCHER=\"$(WRT_LAUNCHER)\"")
ELSE(WRT_LAUNCHER)
    message(FATAL_ERROR, "WRT LAUNCHER binary path is not set")
ENDIF(WRT_LAUNCHER)

# Target - definition
ADD_EXECUTABLE(${TARGET_WGT_BACKEND} ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_WGT_BACKEND} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_WGT_BACKEND} PUBLIC
  PKGMGR_INSTALLER_DEPS
  WIDGET_MANIFEST_PARSER_DEPS
)

# Target - in-package deps
TARGET_LINK_LIBRARIES(${TARGET_WGT_BACKEND} PUBLIC ${TARGET_LIBNAME_COMMON})

# Install
INSTALL(TARGETS ${TARGET_WGT_BACKEND} DESTINATION ${BINDIR})
