# Target - sources
SET(SRCS
  application_manifest_constants.cc
  manifest.cc
)
# Target - definition
ADD_LIBRARY(${TARGET_LIBNAME_WIDGET_MANIFEST_PARSER} SHARED ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_LIBNAME_WIDGET_MANIFEST_PARSER} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_LIBNAME_WIDGET_MANIFEST_PARSER} PUBLIC
  LIBXML_DEPS
  Boost
)

TARGET_LINK_LIBRARIES(${TARGET_LIBNAME_WIDGET_MANIFEST_PARSER} PUBLIC ${TARGET_LIBNAME_UTILS})

# Extra
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_WIDGET_MANIFEST_PARSER} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_WIDGET_MANIFEST_PARSER} PROPERTIES SOVERSION ${VERSION_MAJOR})

# Install
INSTALL(TARGETS ${TARGET_LIBNAME_WIDGET_MANIFEST_PARSER} DESTINATION ${LIB_INSTALL_DIR})
