# Target - sources
SET(SRCS
  xpk_backend.cc
)
# Target - definition
ADD_EXECUTABLE(${TARGET_XPK_BACKEND} ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_XPK_BACKEND} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_XPK_BACKEND} PUBLIC
  PKGMGR_INSTALLER_DEPS
)
# Target - in-package deps
TARGET_LINK_LIBRARIES(${TARGET_XPK_BACKEND} PUBLIC ${TARGET_LIBNAME_COMMON})

# Install
INSTALL(TARGETS ${TARGET_XPK_BACKEND} DESTINATION ${BINDIR})
