# Target - sources
SET(SRCS
  scoped_testing_manifest_handler_registry.cc
)
# Target - definition
ADD_LIBRARY(${TARGET_UNITTEST_COMMON} STATIC ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_UNITTEST_COMMON} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../../")

# Target in-package deps
TARGET_LINK_LIBRARIES(${TARGET_UNITTEST_COMMON} PUBLIC ${TARGET_LIBNAME_WIDGET_MANIFEST_PARSER})

# Extra
SET_TARGET_PROPERTIES(${TARGET_UNITTEST_COMMON} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${TARGET_UNITTEST_COMMON} PROPERTIES SOVERSION ${VERSION_MAJOR})
